# SLProject

./: .gitignore  .gitmodules
AR-Android/app/: CMakeCache.txt  CMakeLists.txt  build.gradle
AR-Android/app/src/androidTest/java/ch/bfh/ar/: ExampleInstrumentedTest.java
AR-Android/app/src/main/: AndroidManifest.xml
AR-Android/app/src/main/cpp/: native-lib.cpp
AR-Android/app/src/main/java/ch/bfh/ar/: GLES2Activity.java  GLES2Lib.java  GLES2View.java  GLES3Lib.java  MainActivity.java
AR-Android/app/src/main/res/layout/: activity_main.xml
AR-Android/app/src/main/res/values/: strings.xml
AR-Android/app/src/test/java/ch/bfh/ar/: ExampleUnitTest.java
app-Demo-Android/: .gitignore
app-Demo-Android/app/: CMakeLists.txt  build.gradle
app-Demo-Android/app/src/main/: AndroidManifest.xml
app-Demo-Android/app/src/main/cpp/: native-lib.cpp
app-Demo-Android/app/src/main/java/ch/bfh/ar/: CameraService.java  GLES3Activity.java  GLES3Lib.java
app-Demo-Android/app/src/main/res/layout/: service.xml
include/: SL.h  SLGLEnums.h  glUtils.h
lib-SLProject/source/: glUtils.cpp
lib-SLProject/source/CV/: SLCVCapture.cpp
